--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -45,7 +45,7 @@ body {
   width: 88%;
   height: 88%;
   border: 1px solid black;
-  background-color: red;
+  background-color: transparent;
   position: absolute;
   top: 50%;
   left: 50%;
